test_scores/negative_dimers/features/Q13617.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q13617.pkl.xz